# mnist-uv-typing-pytest

./: README.md  pyproject.toml
